BUG Reload scheduled tickets after auto-open

--- a/release-notes.txt
+++ b/release-notes.txt
@@ -21,7 +21,8 @@
 Activities sorted by application function.
 
 * Situation
-	NONE
+	BUG
+		Reload scheduled tickets after auto-open
 * Callboard
 	NONE
 * Communication
