New action Form submit with ajax, Go back to the right situation-screen *Update action Form submit with ajax, Go back to ticket instead to situation

--- a/release-notes.txt
+++ b/release-notes.txt
@@ -33,17 +33,19 @@ Activities sorted by application function.
 * Ticket - update
 	CHANGE
 		Form submit with ajax.
-* Ticket - dispatch
-	NONE
 * Ticket - report
 	NONE
 * Ticket - close
 	CHANGE
 		Form submit with ajax.
 * Ticket - new action
-	NONE
+	CHANGE
+		Form submit with ajax.
 * Ticket - update action
-	NONE
+	CHANGE
+		Form submit with ajax.
+	BUGFIX
+		Go back to ticket instead to situation
 * Ticket - dispatch
 	NONE
 * Ticket - disposition
