Communication Remove href

--- a/release-notes.txt
+++ b/release-notes.txt
@@ -28,7 +28,8 @@ Activities sorted by application function.
 * Callboard
 	NONE
 * Communication
-	NONE
+	CHANGE
+		Remove href
 * Ticket - new
 	CHANGE
 		Form submit with ajax
