Ticket - new + update Repair something for form name Reports alter function name of get_incident_type_select_str

--- a/release-notes.txt
+++ b/release-notes.txt
@@ -106,6 +106,7 @@ Activities sorted by application function.
 * Reports
 	CHANGE
 		cancel-button switched to function goto_window
+		Rename form to reports_form
 * Settings - overview
 	CHANGE
 		cancel-button switched to function goto_window
