Misc Change popup to top notice danger Error

--- a/release-notes.txt
+++ b/release-notes.txt
@@ -233,3 +233,4 @@ Activities sorted by application function.
 		add identification for Edge-Browser	
 		remove function cancel_button()
 		Change the number of characters in db-table captions and hints to save IPv6.
+		Change popup to top notice danger Error
