--- a/release-notes.txt
+++ b/release-notes.txt
@@ -3,12 +3,12 @@
 * Tested platforms
 
 	- Windows 10 Pro (VLSC)
-		- Database:      mariadb-5.5.59-winx64
-		- Webserver:     lighttpd-1.4.48-1-win64-ssl
-		- PHP:           php-7.2.3-nts-Win32-VC15-x64
+		- Database:      10.4.27-MariaDB
+		- Webserver:     Apache/2.4.54 (Win64) OpenSSL/1.1.1p
+		- PHP:           8.2.0
 		- Graphics mode: 1920 x 1080 (16:9)
-		- Browser:       Firefox 100.0.2, Zoom: 120%
-						 Google Chrome 102.0.5005.63, Zoom: 125%
+		- Browser:       Firefox 112.0.1, Zoom: 120%
+						 Google Chrome 112.0.5615.138, Zoom: 125%
 
 	- Ubuntu 22.04 LTS
 		- Database:      10.6.12-MariaDB
